# op-interop-contender

./: .gitignore  .seed  Cargo.toml  README.md
src/: admin_api.rs  args.rs  file_seed.rs  main.rs  op_relay.rs  spam_callback.rs  utils.rs
src/contracts/: Create2Factory.hex  CrossChainBulletinBoard.hex  mod.rs
src/scenarios/: bulletin_board.rs  l2MintAndSend.toml  mod.rs  spam_me.rs
